# huuva-backend

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: Dockerfile  dependencies.py  main.py  mappings.py
app/api/api_formats/: item.py  item_status.py  order.py  order_status.py
app/api/mappings/: order.py
app/api/router/: order.py
app/api/v1/: orders.py
app/config/: config.py  settings.py
app/core/: config.py
app/core/entities/: base.py  item.py  item_status.py  order.py  order_status.py
app/db/: database.py
app/db/mappings/: item.py  order.py
app/db/models/: item.py  item_status.py  order.py  order_status.py
app/db/repositories/: item.py  order.py
app/exceptions/: error_handler.py  exceptions.py
app/models/: order.py
app/repositories/: order.py
app/schemas/: base.py  order.py
app/services/: item.py  order.py
deploy/: docker-compose.dev.yml
huuva_backend/: __main__.py  dependencies.py  gunicorn_runner.py  main.py  scheduler.py  settings.py
huuva_backend/api/api_formats/: item.py  item_status.py  order.py  order_status.py
huuva_backend/api/router/: order.py
huuva_backend/config/: settings.py
huuva_backend/core/entities/: base.py  item.py  item_status.py  order.py  order_status.py
huuva_backend/db/: base.py  database.py  utils.py
huuva_backend/db/mappings/: item.py  order.py
huuva_backend/db/migrations/: env.py
huuva_backend/db/migrations/versions/: add_analytics_views_3ed2f5cf77e5.py  change_item_status_history_index_unique__9219e061d5b4.py  change_last_uuid_to_str_79a1132de7f3.py  change_uuids_for_str_f0413131d030.py  create_order_system_models_f15e66159415.py
huuva_backend/db/models/: __init__.py  item.py  item_status.py  order.py  order_status.py
huuva_backend/db/repositories/: item.py  order.py
huuva_backend/exceptions/: error_handler.py  exceptions.py
huuva_backend/services/: analytics.py  item.py  order.py
huuva_backend/web/: application.py  lifespan.py
huuva_backend/web/api/: router.py
huuva_backend/web/api/api_formats/: analytics.py  base.py  item.py  item_status.py  order.py  order_status.py
huuva_backend/web/api/views/: __init__.py  analytics.py  health.py  order.py
tests/: __init__.py  conftest.py  test_template.py
tests/db/repositories/: conftest.py  test_item.py  test_order.py
tests/services/: test_item.py  test_order.py
tests/web/api/views/: test_order.py
