[project]
name = "huuva-backend"
version = "0.1.0"
description = "Order Management API"
authors = [
    {name = "Oscar Pacheco",email = "oscarandrespacheco@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "prettyconf (>=2.3.0,<3.0.0)",
    "sentry-sdk (>=2.25.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.5"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
