[project]
name = "huuva-backend"
version = "0.1.0"
description = "Order Management API"
authors = [
    {name = "Oscar Pacheco",email = "oscarandrespacheco@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "prettyconf (>=2.3.0,<3.0.0)",
    "sentry-sdk (>=2.25.1,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.5"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"


[tool.isort]
line_length = 119
profile = "black"
src_paths = ["app", "tests"]

[tool.black]
target-version = ["py313"]
include = '\.pyi?$'
line-length = 119

[tool.ruff]
lint.select = ["ALL"]
ignore = [
    "D",      # pydocstyle
]
show-fixes = true
line-length = 119
target-version = "py313"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.model_validator", "pydantic.validator"]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
python_version = "3.13"
mypy_path = './stubs'

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
